download pcc min results unpaginated/sorted/filtered
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1655,5 +1655,6 @@
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
-    "xOhm":"x (Ω)"   
+    "xOhm":"x (Ω)",
+    "csvExportPccMinResultError": "An error occurred when exporting pcc min results"
  }
