--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1655,5 +1655,7 @@
     "PccMinTri": "Pcc min (MVA) ",
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
-    "xOhm":"x (Ω)"   
+    "xOhm":"x (Ω)",
+    "workspaces": "Workspaces",
+    "resetWorkspaceConfirmation": "Are you sure you want to reset this workspace? All open windows will be closed."
  }
