--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,11 +27,16 @@
 
     "moveStudyNotification": "The study has been moved from {oldStudyPath} to {studyPath}",
 
-    "CopiedNodeInvalidationMessage": "As a result of node modification, the contents of the clipboard have been deleted",
-    "CopiedModificationInvalidationMessage": "Following a modification of the hypothesis, the content of the clipboard has been deleted",
-    "CopiedModificationInvalidationMessageFromAnotherStudy": "Following a change in the modifications in another study, the content of the clipboard has been deleted",
-    "CopiedModificationUpdateMessageFromAnotherStudy": "As a result of copying modifications from another study, the content of the clipboard has been updated",
-    "CopiedModificationInvalidationMessageAfterTabClosure": "As a result of closing the tab from another study, the content of the clipboard has been deleted",
+    "copiedNodeInvalidationMsg": "Clipboard content cleared due to changes in nodes",
+    "copiedNodeInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in nodes in another study",
+    "copiedNodeInvalidationMsgFromStudyClosure": "Clipboard content cleared due to a study being closed",
+    "copiedNodeUpdateMsg": "Clipboard content updated after copying a node in another study",
+
+    "copiedModificationsInvalidationMsg": "Clipboard content cleared due to changes in modifications",
+    "copiedModificationsInvalidationMsgFromOtherStudy": "Clipboard content cleared due to changes in modifications in another study",
+    "copiedModificationsInvalidationMsgFromStudyClosure": "Clipboard content cleared due to a study being closed",
+    "copiedModificationsUpdateMsg": "Clipboard content updated after copying modifications in another study",
+
     "exportNetwork": "Export the network",
     "export": "Export",
     "download.fileName": "File name",
