Enrich load flow status tab
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -437,7 +437,10 @@
     "startLoadFlowError": "An error occurred while starting the load flow",
     "LoadFlowResultsCurrentViolations": "Current violations",
     "LoadFlowResultsVoltageViolations": "Voltage violations",
-    "LoadFlowResultsStatus": "Status",
+    "LoadFlowResultsSummary": "Summary",
+    "LoadFlowResultsSynchronousComponents": "Synchronous components :",
+    "LoadFlowResultsCountryAdequacies": "Country adequacy : ",
+    "LoadFlowResultsExchanges": "Exchanges :",
     "ComputationResultsLogs": "Logs",
 
     "results.globalFilter.categories": "Categories",
@@ -459,6 +462,15 @@
     "iterationCount": "Iteration count",
     "slackBusId": "Slack bus ids",
     "slackBusActivePowerMismatch": "Slack bus active power mismatch (MW)",
+    "consumptions": "Consumptions (MW)",
+    "generations": "Generations (MW)",
+    "countryAdequacyGeneration": "Generation (MW)",
+    "countryAdequacyLoad": "Load (MW)",
+    "exchanges": "Exchanges (MW)",
+    "losses": "Losses (MW)",
+    "netPosition": "Net position (MW)",
+    "netPositionMinusExchanges": "Net position - Exchanges (MW)",
+    "borders": "Borders",
 
     "isOk": "Ok",
     "metrics": "Metrics",
