--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -91,6 +91,7 @@
     "Tree": "Arbre",
     "modifications": "Modifications",
     "images": "Images",
+    "panels": "Panneaux",
     "NetworkVisualizations": "Images réseau",
     "None": "Aucun",
     "EmptyField": "Vider le champ",
@@ -1658,5 +1659,11 @@
     "IccMinTri": "Icc min (kA)",
     "rOhm": "r (Ω)",
     "xOhm":"x (Ω)",
-    "importParameters": "Paramètres d'import"
+    "importParameters": "Paramètres d'import",
+    "workspaces": "Espaces",
+    "resetWorkspaceConfirmation": "Êtes-vous sûr de vouloir réinitialiser cet espace de travail ? Toutes les fenêtres ouvertes seront fermées.",
+    "renameWorkspace": "Renommer l'espace de travail",
+    "workspaceName": "Nom de l'espace de travail",
+    "manageWorkspaces": "Gérer les espaces de travail",
+    "reset": "Réinitialiser"
 }
