Do not close modifications panel when switching to root node
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -90,6 +90,7 @@
     "Map": "Map",
     "Tree": "Tree",
     "modifications": "Modifications",
+    "modificationsForbiddenOnRootNode": "Modifications forbidden on root node",
     "images": "Images",
     "panels": "Panels",
     "NetworkVisualizations": "Network visualizations",
