--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -90,6 +90,7 @@
     "Map": "Carte",
     "Tree": "Arbre",
     "modifications": "Modifications",
+    "modificationsForbiddenOnRootNode": "Modifications interdites sur le noeud racine",
     "images": "Images",
     "panels": "Panneaux",
     "NetworkVisualizations": "Images réseau",
