Diagram navigation system
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1665,5 +1665,6 @@
     "renameWorkspace": "Renommer l'espace de travail",
     "workspaceName": "Nom de l'espace de travail",
     "manageWorkspaces": "Gérer les espaces de travail",
-    "reset": "Réinitialiser"
+    "reset": "Réinitialiser",
+    "history": "Historique"
 }
