--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1669,7 +1669,6 @@
     "renameWorkspace": "Rename Workspace",
     "workspaceName": "Workspace Name",
     "manageWorkspaces": "Manage workspaces",
-    "window": "window",
-    "windows": "windows",
-    "reset": "Reset"
+    "reset": "Reset",
+    "history": "History"
  }
