--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -708,7 +708,7 @@
     "stepUpTransformerX": "Réactance du transformateur (Ω)",
     "TransformerReactanceForm": "Réactance du transformateur",
     "FrequencyRegulation": "Compensation",
-    "Droop": "Participation",
+    "Droop": "Statisme",
     "PlannedActivePowerSetPointForm": "Puissance imposée",
     "plannedActivePowerSetPoint": "P imposée (MW)",
     "MarginalCost": "Coût de démarrage",
@@ -1665,5 +1665,6 @@
     "renameWorkspace": "Renommer l'espace de travail",
     "workspaceName": "Nom de l'espace de travail",
     "manageWorkspaces": "Gérer les espaces de travail",
-    "reset": "Réinitialiser"
+    "reset": "Réinitialiser",
+    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)"
 }
