--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1666,11 +1666,10 @@
     "xOhm":"x (Ω)",
     "importParameters": "Import parameters",
     "workspaces": "Workspaces",
-    "resetWorkspaceConfirmation": "Are you sure you want to reset this workspace? All open windows will be closed.",
+    "resetWorkspaceConfirmation": "Are you sure you want to reset this workspace? All open panels will be closed.",
     "renameWorkspace": "Rename Workspace",
     "workspaceName": "Workspace Name",
     "manageWorkspaces": "Manage workspaces",
-    "window": "window",
-    "windows": "windows",
-    "reset": "Reset"
+    "reset": "Reset",
+    "history": "History"
  }
