Fix workspace toolbar panels translation (#3518)
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -94,6 +94,7 @@
     "modificationsForbiddenOnRootNode": "Modifications forbidden on root node",
     "images": "Images",
     "panelsCount": "{count, plural, =0 {no panel} =1 {# panel} other {# panels}}",
+    "panels": "Panels",
     "NetworkVisualizations": "Network visualizations",
     "None": "None",
     "EmptyField": "Empty the field",
