--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -889,6 +889,7 @@
     "AttachmentPoint": "Point de piquage",
     "AttachmentPointId": "ID point de piquage",
     "AttachmentPointName": "Nom point de piquage",
+    "SpecifyAttachmentPoint": "Spécifier le point de piquage (optionnel)",
     "AttachedLine": "Liaison de piquage",
     "LineAttached": "Liaison de piquage",
     "AttachedLineId": "ID liaison de piquage",
@@ -1662,9 +1663,10 @@
     "xOhm":"x (Ω)",
     "importParameters": "Paramètres d'import",
     "workspaces": "Espaces",
-    "resetWorkspaceConfirmation": "Êtes-vous sûr de vouloir réinitialiser cet espace de travail ? Toutes les fenêtres ouvertes seront fermées.",
+    "resetWorkspaceConfirmation": "Êtes-vous sûr de vouloir réinitialiser cet espace de travail ? Tous les panneaux ouverts seront fermés.",
     "renameWorkspace": "Renommer l'espace de travail",
     "workspaceName": "Nom de l'espace de travail",
     "manageWorkspaces": "Gérer les espaces de travail",
-    "reset": "Réinitialiser"
+    "reset": "Réinitialiser",
+    "history": "Historique"
 }
