line twt tooltip infos
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1670,5 +1670,8 @@
     "manageWorkspaces": "Gérer les espaces de travail",
     "reset": "Réinitialiser",
     "history": "Historique",
-    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)"
+    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
+    "twtQ": "Q (MVar)",
+    "twtAlpha": "Déphasage",
+    "twtReport":"Rapport de transformation"
 }
