--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -755,6 +755,8 @@
     "BothSides": "Both Sides",
     "SeriesResistanceText": "Series resistance",
     "SeriesReactanceText": "Series reactance",
+    "SeriesResistanceOhm": "Series resistance (Ω)",
+    "SeriesReactanceOhm": "Series reactance (Ω)",
     "ShuntConductanceText": "Shunt conductance",
     "ShuntConductanceText1": "Shunt conductance side 1",
     "ShuntConductanceText2": "Shunt conductance side 2",
@@ -1678,6 +1680,5 @@
     "history": "History",
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
     "twtQ": "Q (MVar)",
-    "twtAlpha": "Shift angle",
-    "twtReport":"Rapport de transformation"
+    "twtAlpha": "Shift angle"
 }
