--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -751,6 +751,8 @@
     "Side": "Côté",
     "SeriesResistanceText": "Résistance série",
     "SeriesReactanceText": "Réactance série",
+    "SeriesResistanceOhm": "Résistance série (Ω)",
+    "SeriesReactanceOhm": "Réactance série (Ω)",
     "ShuntConductanceText": "Conductance parallèle",
     "ShuntConductanceText1": "Conductance parallèle côté 1",
     "ShuntConductanceText2": "Conductance parallèle côté 2",
@@ -1672,6 +1674,5 @@
     "history": "Historique",
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "twtQ": "Q (MVar)",
-    "twtAlpha": "Déphasage",
-    "twtReport":"Rapport de transformation"
-}
+    "twtAlpha": "Déphasage"
+ }
