add load tooltip
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -478,6 +478,8 @@
     "loadType": "Type",
     "ConstantP": "Constant p (MW)",
     "ConstantQ": "Constant q (MVar)",
+    "ConsP": "Qcons (MW)",
+    "ConsQ": "Pcons (MW)",
     "DanglingLines": "Dangling Lines",
     "PairingKey": "UCTE Xnode",
     "HvdcLines": "HVDC Lines",
