--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -476,7 +476,9 @@
     "selectionType": "Type de sélection",
     "loadType": "Type",
     "ConstantP": "P constant (MW)",
-    "ConstantQ": "Q constant (MVar)",
+    "ConstantQ": "Q constant (MVar)", 
+    "ConsP": "Qcons (MW)",
+    "ConsQ": "Pcons (MW)", 
     "DanglingLines": "Lignes frontières",
     "PairingKey": "Xnode UCTE",
     "HvdcLines": "Lignes HVDC",
