--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1674,5 +1674,6 @@
     "history": "Historique",
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "twtQ": "Q (MVar)",
-    "twtAlpha": "Déphasage"
+    "twtAlpha": "Déphasage",
+    "DEFAULT": "DEFAULT"
  }
