--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1679,5 +1679,11 @@
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
     "twtQ": "Q (MVar)",
     "twtAlpha": "Shift angle",
-    "twtReport":"Rapport de transformation"
+    "twtReport":"Rapport de transformation",
+    "tooltip.u": "U (kV)",
+    "tooltip.angle": "θ (°)",
+    "tooltip.generation": "Generation (MW)",
+    "tooltip.load": "Load (MW)",
+    "tooltip.balance": "Balance (MW)",
+    "tooltip.icc": "Isc (kA)"
 }
