--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -199,6 +199,9 @@
     "startVoltageInitError": "Une erreur est survenue lors de l'initialisation du plan de tension",
     "FilterEvaluationError": "Une erreur est survenue lors de l'évaluation du filtre",
     "voltageInitError": "Une erreur est survenue lors de l'initialisation du plan de tension",
+    "VoltageinitRootNetworkName": "Réseau racine : {rootNetworkName}",
+    "VoltageinitNodeName": "Noeud : {nodeName}",
+    "VoltageinitDate": "Date : {date}",
 
     "SelectAll": "Tous",
     "UnselectAll": "Aucun",
