Show root network name, node name and computation date in voltage init modification dialog
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -202,7 +202,7 @@
     "voltageInitCancelError": "The voltage profile initialization could not be cancelled",
     "VoltageinitRootNetworkName": "Root network : {rootNetworkName}",
     "VoltageinitNodeName": "Node : {nodeName}",
-    "VoltageinitDate": "Date : {date}",
+    "VoltageinitDate": "Computation date : {computationDate}",
 
     "SelectAll": "All",
     "UnselectAll": "None",
