--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -200,6 +200,7 @@
     "FilterEvaluationError": "Une erreur est survenue lors de l'évaluation du filtre",
     "voltageInitError": "Une erreur est survenue lors de l'initialisation du plan de tension",
 
+    "Select": "Choisir",
     "SelectAll": "Tous",
     "UnselectAll": "Aucun",
 
@@ -1408,6 +1409,7 @@
     "pccMinError": "Une erreur est survenue lors de l'exécution de pcc min N-1",
     "PccMinResultsError": "Une erreur s'est produite lors de la récupération du résultat de pcc min N-1",
     "NoFilter": "Aucun filtre",
+    "NoFolder": "Aucun dossier",
     "searchPlaceholder": "Recherche",
     "searchPlaceholderLog": "Rechercher dans les Logs",
     "searchPlaceholderLogsTreeStructure": "Rechercher dans l'arborescence",
@@ -1667,5 +1669,9 @@
     "manageWorkspaces": "Gérer les espaces de travail",
     "reset": "Réinitialiser",
     "history": "Historique",
-    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)"
+    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
+
+    "gridExplore": "GridExplore",
+    "myComputer": "Mon ordinateur",
+    "destination": "Destination"
 }
