Rename field in exchanges
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -469,7 +469,7 @@
     "exchanges": "Exchanges (MW)",
     "losses": "Losses (MW)",
     "netPosition": "Net position (MW)",
-    "netPositionMinusExchanges": "Net position - Exchanges (MW)",
+    "exchange": "Net position - Exchanges (MW)",
     "borders": "Borders",
 
     "isOk": "Ok",
