--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1036,6 +1036,20 @@
 
     "DefinePropertiesButton": "Define properties",
     "DefinePropertiesTitle": "Additional properties",
+    "GenerateEmptyModel": "Generate empty model",
+    "GeneratePrefilledModel": "Generate prefilled model",
+    "RestrictEquipmentList": "Restrict equipment list",
+    "CurrentGridState": "Current grid state",
+    "ColumnSelectionRequired": "At least one column must be selected",
+
+    "PrefilledColumn.Conductance": "Conductance",
+    "PrefilledColumn.Susceptance": "Susceptance",
+    "PrefilledColumn.Connected": "Connected",
+    "PrefilledColumn.ConnectionInfo": "Connection info",
+    "PrefilledColumn.WindingVoltages": "Winding voltages",
+    "PrefilledColumn.ActivePowerLimits": "Active power limits",
+    "PrefilledColumn.ReactivePowerLimits": "Reactive power limits",
+    "PrefilledColumn.ReactiveCapabilityCurve": "Reactive capability curve",
 
     "G": "Magnetizing conductance",
     "B": "Magnetizing susceptance",
