--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1667,5 +1667,8 @@
     "manageWorkspaces": "Gérer les espaces de travail",
     "reset": "Réinitialiser",
     "history": "Historique",
-    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)"
+    "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
+    "ActivePower": "P (MW)",
+    "reactivePowerTooltip": "Q (MVar)"
+
 }
