display tooltip generator
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1675,5 +1675,12 @@
     "history": "History",
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
     "ActivePower": "P (MW)",
-    "reactivePowerTooltip": "Q (MVar)"
+    "reactivePowerTooltip": "Q (MVar)",
+    "activePowerSetPointTooltip":"Pcons (MW)",
+    "plannedActivePowerSetPointTooltip": "Pimp (MW)",
+    "reactivePowerSetpointTooltip":"Qcons (MW)",
+    "MinimumActivePowerTooltip": "Pmin (MW)",
+    "MaximumActivePowerTooltip": "Pmax (MW)",
+    "MinimumReactivePowerTooltip": "Pmin (MW)",
+    "MaximumReactivePowerTooltip": "Pmax (MW)"
 }
