Show context info for voltage init modification (#3552)
* Show root network name, node name and computation date in voltage init modification dialog

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -200,6 +200,9 @@
     "FilterEvaluationError": "An error occurred while evaluating the filter",
     "voltageInitError": "An error occurred while executing the voltage profile initialization",
     "voltageInitCancelError": "The voltage profile initialization could not be cancelled",
+    "VoltageinitRootNetworkName": "Root network : {rootNetworkName}",
+    "VoltageinitNodeName": "Node : {nodeName}",
+    "VoltageinitDate": "Computation date : {computationDate}",
 
     "SelectAll": "All",
     "UnselectAll": "None",
