--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1574,7 +1574,7 @@
     "diagramLoadingFail": "An error occurred while loading {diagramName}",
     "expand": "Expand",
     "expandAllVoltageLevels": "Expand all voltage levels",
-    "addVoltageLevelsFromFilter": "Add voltage levels from a filter",
+    "addVoltageLevelsFromFilter": "Add supplementary filter",
     "addVoltageLevel": "Add a voltage level",
     "searchVoltageLevelInNad": "Search voltage level",
     "noResultsFound": "No results found",
