Fix csv export and csv filenames
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -441,9 +441,9 @@
     "LoadFlowResultsCurrentViolations": "Current violations",
     "LoadFlowResultsVoltageViolations": "Voltage violations",
     "LoadFlowResultsSummary": "Summary",
-    "LoadFlowResultsSynchronousComponents": "Synchronous components :",
-    "LoadFlowResultsCountryAdequacies": "Country adequacy : ",
-    "LoadFlowResultsExchanges": "Exchanges :",
+    "LoadFlowResultsSynchronousComponents": "Synchronous components",
+    "LoadFlowResultsCountryAdequacies": "Country adequacies",
+    "LoadFlowResultsExchanges": "Exchanges",
     "ComputationResultsLogs": "Logs",
 
     "results.globalFilter.categories": "Categories",
