--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1572,6 +1572,7 @@
     "diagramLoadingFail": "Erreur lors du chargement de {diagramName}",
     "expand": "Étendre",
     "expandAllVoltageLevels": "Étendre tous les postes",
+    "addVoltageLevelsFromFilter": "Ajouter un filtre complémentaire",
     "addVoltageLevel": "Ajouter un poste",
     "searchVoltageLevelInNad": "Rechercher un poste",
     "noResultsFound": "Aucun résultat trouvé",
