--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1673,6 +1673,11 @@
     "history": "Historique",
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "ActivePower": "P (MW)",
-    "reactivePowerTooltip": "Q (MVar)"
-
+    "reactivePowerTooltip": "Q (MVar)",
+    "tooltip.u": "U (kV)",
+    "tooltip.angle": "θ (°)",
+    "tooltip.generation": "Production (MW)",
+    "tooltip.load": "Consommation (MW)",
+    "tooltip.balance": "Bilan (MW)",
+    "tooltip.icc": "Icc (kA)"
 }
