new solution : floating associated SLDs
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1574,6 +1574,10 @@
     "searchVoltageLevelInNad": "Search voltage level",
     "noResultsFound": "No results found",
     "hide": "Hide",
+    "hideAll": "Hide all",
+    "showAll": "Show all",
+    "grid": "Grid layout",
+    "cascade": "Cascade layout",
     "hideLabels": "Hide labels in edit mode",
     "showLabels": "Show labels",
     "CreateSubstationInVoltageLevelIdenticalId": "Voltage Level ID can not match Substation ID",
@@ -1674,8 +1678,8 @@
     "reset": "Reset",
     "history": "History",
     "activePowerControlTooltip": "Slack bus active power repartition key: maxP/droop, default droop = 4 (used if balanceType is PROPORTIONAL_TO_GENERATION_P_MAX)",
-    "associatedSLDs": "Associated SLDs",
-    "removeAll": "Remove All",
+    "removeAll": "Close All",
+    "removeAllAssociatedSldsConfirmation": "Are you sure you want to close all associated voltage levels?",
     "createNewNAD": "Create New NAD",
     "existingNAD": "Existing NAD"
  }
