--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -440,7 +440,10 @@
     "startLoadFlowError": "Une erreur est survenue lors du lancement du load flow",
     "LoadFlowResultsCurrentViolations": "Contraintes de transit",
     "LoadFlowResultsVoltageViolations": "Contraintes de tension",
-    "LoadFlowResultsStatus": "Statut",
+    "LoadFlowResultsSummary": "Bilan",
+    "LoadFlowResultsSynchronousComponents": "Composantes synchrones",
+    "LoadFlowResultsCountryAdequacies": "Equilibres par pays",
+    "LoadFlowResultsExchanges": "Echanges",
     "ComputationResultsLogs": "Logs",
 
     "results.globalFilter.categories": "Catégories",
@@ -462,7 +465,15 @@
     "iterationCount": "Nombre d'itérations",
     "slackBusId": "ID nœuds bilans",
     "slackBusActivePowerMismatch": "Écart de puissance active au nœud bilan (MW)",
-
+    "consumptions": "Consommations (MW)",
+    "generations": "Productions (MW)",
+    "countryAdequacyGeneration": "Production (MW)",
+    "countryAdequacyLoad": "Consommation (MW)",
+    "exchanges": "Echanges (MW)",
+    "losses": "Pertes (MW)",
+    "netPosition": "Position nette (MW)",
+    "exchange": "Position nette - Echanges (MW)",
+    "borders": "Frontières",
     "isOk": "Ok",
     "metrics": "Métriques",
 
