--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1699,6 +1699,7 @@
     "history": "Historique",
     "activePowerControlTooltip": "Clé de distribution de la puissance au nœud bilan : maxP/Statisme, statisme par défaut = 4 (valable pour le mode compensation proportionnel à la puissance maximale des groupes)",
     "ActivePower": "P (MW)",
-    "reactivePowerTooltip": "Q (MVar)"
-
+    "reactivePowerTooltip": "Q (MVar)",
+    "unbuildAllNodesDialogTitle": "Confirmation",
+    "unbuildAllNodesDialogContent": "Toutes les réalisations de tous les nœuds de l'arbre pour tous les réseaux racines ainsi que tous les résultats de calcul seront supprimés"
 }
